--- a/CurrencyConverter/Base.lproj/Main.storyboard
+++ b/CurrencyConverter/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14269.12" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="b7d-LH-MFP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14269.12" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SRk-tX-YeQ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,68 +10,73 @@
     </dependencies>
     <scenes>
         <!--Table View Controller-->
-        <scene sceneID="n9I-NT-SL2">
+        <scene sceneID="yYv-Oj-eEe">
             <objects>
-                <tableViewController id="b7d-LH-MFP" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="bzE-z5-0gw">
+                <viewController id="SRk-tX-YeQ" customClass="TableViewController" customModule="CurrencyConverter" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="XAH-7z-4HC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="100" id="zmc-SH-HNf" customClass="CurrencyTableViewCell" customModule="CurrencyConverter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="100"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell1" rowHeight="95" id="zmc-SH-HNf" customClass="CellView" customModule="CurrencyConverter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="95"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zmc-SH-HNf" id="0nF-g3-b6F">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="94.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pOb-Y3-4nY">
-                                            <rect key="frame" x="16" y="5" width="89.5" height="89.5"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="usd" translatesAutoresizingMaskIntoConstraints="NO" id="pOb-Y3-4nY">
+                                            <rect key="frame" x="16" y="11" width="84" height="73"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" secondItem="pOb-Y3-4nY" secondAttribute="height" multiplier="1:1" id="81H-E2-cvw"/>
+                                                <constraint firstAttribute="width" constant="84" id="0Bs-rb-ZqS"/>
+                                                <constraint firstAttribute="width" secondItem="pOb-Y3-4nY" secondAttribute="height" multiplier="84:73" id="xVT-NK-AqX"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$ 0.7765" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pBO-v2-U0N">
-                                            <rect key="frame" x="113" y="5" width="112" height="33.5"/>
+                                            <rect key="frame" x="108" y="11" width="112" height="43"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8BQ-42-OxT">
-                                            <rect key="frame" x="113" y="39" width="35" height="21"/>
+                                            <rect key="frame" x="108" y="53" width="35" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="8BQ-42-OxT" firstAttribute="top" secondItem="pBO-v2-U0N" secondAttribute="bottom" constant="0.5" id="B56-Wz-03U"/>
-                                        <constraint firstAttribute="bottom" secondItem="pOb-Y3-4nY" secondAttribute="bottom" constant="5" id="Blg-ip-pYI"/>
-                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="8BQ-42-OxT" secondAttribute="trailing" constant="20" symbolic="YES" id="XYL-1s-jZ8"/>
-                                        <constraint firstItem="pBO-v2-U0N" firstAttribute="top" secondItem="0nF-g3-b6F" secondAttribute="top" constant="5" id="ful-yU-IRw"/>
-                                        <constraint firstItem="8BQ-42-OxT" firstAttribute="leading" secondItem="pOb-Y3-4nY" secondAttribute="trailing" constant="7.5" id="hch-xI-EOt"/>
-                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="pBO-v2-U0N" secondAttribute="trailing" constant="20" symbolic="YES" id="i3m-9t-aPf"/>
-                                        <constraint firstItem="pOb-Y3-4nY" firstAttribute="top" secondItem="0nF-g3-b6F" secondAttribute="top" constant="5" id="oak-ah-kiV"/>
-                                        <constraint firstItem="pBO-v2-U0N" firstAttribute="leading" secondItem="pOb-Y3-4nY" secondAttribute="trailing" constant="7.5" id="oz9-Uf-FsS"/>
-                                        <constraint firstItem="pOb-Y3-4nY" firstAttribute="leading" secondItem="0nF-g3-b6F" secondAttribute="leading" constant="16" id="xWl-M6-Fzf"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="8BQ-42-OxT" secondAttribute="bottom" constant="10" id="9R5-4Q-hyV"/>
+                                        <constraint firstItem="pBO-v2-U0N" firstAttribute="top" secondItem="0nF-g3-b6F" secondAttribute="topMargin" id="9q4-Dp-BBm"/>
+                                        <constraint firstItem="pOb-Y3-4nY" firstAttribute="top" secondItem="0nF-g3-b6F" secondAttribute="topMargin" id="ELX-oG-bio"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="8BQ-42-OxT" secondAttribute="trailing" constant="20" symbolic="YES" id="M0H-eN-Dbw"/>
+                                        <constraint firstItem="pBO-v2-U0N" firstAttribute="leading" secondItem="pOb-Y3-4nY" secondAttribute="trailing" constant="8" id="VZE-TF-wH4"/>
+                                        <constraint firstItem="pOb-Y3-4nY" firstAttribute="leading" secondItem="0nF-g3-b6F" secondAttribute="leadingMargin" id="XVX-Mk-dUs"/>
+                                        <constraint firstItem="8BQ-42-OxT" firstAttribute="leading" secondItem="pOb-Y3-4nY" secondAttribute="trailing" constant="8" id="bKL-Lg-Nr7"/>
+                                        <constraint firstItem="pOb-Y3-4nY" firstAttribute="bottom" secondItem="0nF-g3-b6F" secondAttribute="bottomMargin" id="fH5-a5-ADW"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="pBO-v2-U0N" secondAttribute="bottom" constant="30" id="fXE-mf-Vhw"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="pBO-v2-U0N" secondAttribute="trailing" constant="20" symbolic="YES" id="nEN-ir-d1I"/>
+                                        <constraint firstItem="8BQ-42-OxT" firstAttribute="top" secondItem="0nF-g3-b6F" secondAttribute="topMargin" constant="42" id="vj8-KP-8M0"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="convertAmountLabel" destination="pBO-v2-U0N" id="cTG-MZ-wyA"/>
-                                    <outlet property="countryImageView" destination="pOb-Y3-4nY" id="fFa-ah-gg9"/>
-                                    <outlet property="countryLabel" destination="8BQ-42-OxT" id="tnz-yr-RfS"/>
+                                    <outlet property="convertAmountLabel" destination="pBO-v2-U0N" id="0QF-Vr-f9q"/>
+                                    <outlet property="countryImageView" destination="pOb-Y3-4nY" id="qou-nI-jP8"/>
+                                    <outlet property="countryLabel" destination="8BQ-42-OxT" id="TQB-g5-UsK"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="b7d-LH-MFP" id="FFr-qh-N95"/>
-                            <outlet property="delegate" destination="b7d-LH-MFP" id="oCi-vX-qzN"/>
-                        </connections>
                     </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="FGh-ES-y1X" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                    <connections>
+                        <outlet property="tableView" destination="XAH-7z-4HC" id="yhT-Tg-0XP"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rT8-jO-HKh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="212" y="766.86656671664173"/>
+            <point key="canvasLocation" x="248" y="1610"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="usd" width="256" height="256"/>
+    </resources>
 </document>
